--- a/aplication-dev.properties
+++ b/aplication-dev.properties
@@ -1,4 +1,4 @@
-config.security.outh.client.id=webAngular
-config.security.outh.client.secret=123456
-config.security.outh.jwt.key=aforo255
+config.security.oauth.client.id=webAngular
+config.security.oauth.client.secret=123456
+config.security.oauth.jwt.key=aforo255
 spring.zipkin.base-url=http://zipkin-server:9411
