--- a/service-gateway-dev.properties
+++ b/service-gateway-dev.properties
@@ -5,9 +5,9 @@ zuul.routes.deposit.path=/api/deposit/**
 zuul.routes.deposit.url= http://localhost:8006/
 
 # zuul para seguridad
-zuul.routes.seguridad.service-id=service-seguridad
-zuul.routes.seguridad.path=/api/security/**
-zuul.routes.seguridad.url= http://localhost:8010/
+zuul.routes.security.service-id=service-seguridad
+zuul.routes.security.path=/api/security/**
+zuul.routes.security.url= http://localhost:8010/
 
 
 # zuul para withdrawal
