--- a/service-seguridad-dev.properties
+++ b/service-seguridad-dev.properties
@@ -3,6 +3,6 @@ spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 logging.level.org.hibernate.SQL=debug
 spring.sleuth.sampler.probability=1.0
