--- a/service-seguridad-docker.properties
+++ b/service-seguridad-docker.properties
@@ -1,8 +1,8 @@
-spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.datasource.url=jdbc:mysql://localhost:3306/db_seguridad?serverTimezone=America/Lima&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 logging.level.org.hibernate.SQL=debug
+spring.sleuth.sampler.probability=1.0
