--- a/service-seguridad-dev.properties
+++ b/service-seguridad-dev.properties
@@ -1,8 +1,11 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/db_seguridad?serverTimezone=America/Lima&allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3307/db_seguridad?serverTimezone=America/Lima&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 logging.level.org.hibernate.SQL=debug
 spring.sleuth.sampler.probability=1.0
+
+
+
