--- a/service-gateway-dev.properties
+++ b/service-gateway-dev.properties
@@ -3,31 +3,36 @@
 # zuul para seguridad
 zuul.routes.security.service-id=service-seguridad
 zuul.routes.security.path=/api/security/**
-zuul.routes.security.url= http://localhost:8010/
+#zuul.routes.security.url= http://localhost:8010/
+zuul.routes.security.url= http://service-seguridad:8010/
 
 
 # zuul para withdrawal
 zuul.routes.withdrawal.service-id=service-withdrawal
 zuul.routes.withdrawal.path=/api/withdrawal/**
-zuul.routes.withdrawal.url= http://localhost:8007/
+#zuul.routes.withdrawal.url= http://localhost:8007/
+zuul.routes.withdrawal.url= http://service-withdrawal:8007/
 
 
 # zuul para deposit
 zuul.routes.deposit.service-id=service-deposit
 zuul.routes.deposit.path=/api/deposit/**
-zuul.routes.deposit.url= http://localhost:8006/
+#zuul.routes.deposit.url= http://localhost:8006/
+zuul.routes.deposit.url= http://service-deposit:8006/
 
 
 # zuul para account
 zuul.routes.account.service-id=service-account
 zuul.routes.account.path=/api/account/**
-zuul.routes.account.url= http://localhost:8098/
+#zuul.routes.account.url= http://localhost:8098/
+zuul.routes.account.url= http://service-account:8098/
 
 
 # zuul para historical
 zuul.routes.historical.service-id=service-historical
 zuul.routes.historical.path=/api/historical/**
-zuul.routes.historical.url= http://localhost:8087/
+#zuul.routes.historical.url= http://localhost:8087/
+zuul.routes.historical.url= http://service-historical:8087/
 
 
 zuul.routes.security.sensitive-headers=Cookies,Set-Cookie
