--- a/service-deposit-dev.properties
+++ b/service-deposit-dev.properties
@@ -6,7 +6,8 @@ spring.kafka.producer.value-serializer= org.apache.kafka.common.serialization.St
 spring.kafka.admin.properties.bootstrap.servers=localhost:9092
 
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/db_account
+spring.datasource.url=jdbc:postgresql://microservicio-postgres12:5433/db_account
+#spring.datasource.url=jdbc:postgresql://localhost:5432/db_account
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.datasource.driver-class-name=org.postgresql.Driver
