--- a/service-account-dev.properties
+++ b/service-account-dev.properties
@@ -1,13 +1,16 @@
 #spring.profiles.active= local 
-spring.kafka.consumer.bootstrap-servers= localhost:9092
+spring.kafka.consumer.bootstrap-servers= servicekafka:9092
+#spring.kafka.consumer.bootstrap-servers= localhost:9092
 spring.kafka.consumer.key-deserializer= org.apache.kafka.common.serialization.IntegerDeserializer
 spring.kafka.consumer.value-deserializer= org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.group-id= transaction-events-listener-group
 
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.datasource.url=jdbc:sqlserver://localhost;databaseName=db_account
+spring.datasource.url=jdbc:sqlserver://sqlservice;databaseName=db_account
+#spring.datasource.url=jdbc:sqlserver://localhost;databaseName=db_account
 spring.datasource.username=sa
-spring.datasource.password=admin1990
+spring.datasource.password=1a.2b.3c
+#spring.datasource.password=admin1990
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql = true
 
