--- a/service-deposit-dev.properties
+++ b/service-deposit-dev.properties
@@ -11,7 +11,7 @@ spring.kafka.admin.properties.bootstrap.servers=servicekafka:9092
 spring.datasource.url=jdbc:postgresql://microservicio-postgres12:5432/db_account
 #spring.datasource.url=jdbc:postgresql://localhost:5432/db_account
 spring.datasource.username=postgres
-spring.datasource.password=123456
+spring.datasource.password=root
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
 spring.jpa.hibernate.ddl-auto=create
