--- a/service-account-dev.properties
+++ b/service-account-dev.properties
@@ -6,11 +6,11 @@ spring.kafka.consumer.value-deserializer= org.apache.kafka.common.serialization.
 spring.kafka.consumer.group-id= transaction-events-listener-group
 
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-#spring.datasource.url=jdbc:sqlserver://sqlservice;databaseName=db_account
-spring.datasource.url=jdbc:sqlserver://localhost;databaseName=db_account
+spring.datasource.url=jdbc:sqlserver://sqlservice;databaseName=db_account
+#spring.datasource.url=jdbc:sqlserver://localhost;databaseName=db_account
 spring.datasource.username=sa
-#spring.datasource.password=1a.2b.3c
-spring.datasource.password=admin1990
+spring.datasource.password=1a.2b.3c
+#spring.datasource.password=admin1990
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql = true
 
