--- a/service-account-dev.properties
+++ b/service-account-dev.properties
@@ -6,7 +6,7 @@ spring.kafka.consumer.value-deserializer= org.apache.kafka.common.serialization.
 spring.kafka.consumer.group-id= transaction-events-listener-group
 
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.datasource.url=jdbc:sqlserver://sqlservice:1434;databaseName=db_account
+spring.datasource.url=jdbc:sqlserver://sqlservice;databaseName=db_account
 #spring.datasource.url=jdbc:sqlserver://localhost;databaseName=db_account
 spring.datasource.username=sa
 spring.datasource.password=1a.2b.3c
