--- a/service-account-dev.properties
+++ b/service-account-dev.properties
@@ -7,9 +7,8 @@ spring.kafka.consumer.group-id= transaction-events-listener-group
 
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.datasource.url=jdbc:sqlserver://sqlservice:1433;databaseName=db_account
-#spring.datasource.url=jdbc:sqlserver://localhost;databaseName=db_account
 spring.datasource.username=sa
-spring.datasource.password=1a.2b.3c
+spring.datasource.password=1a.2b.3c.
 #spring.datasource.password=admin1990
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql = true
@@ -19,7 +18,7 @@ spring.jpa.properties.hibernate.format_sql = true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServer2012Dialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create
 logging.level.org.hibernate.SQL=debug
 
 
