--- a/service-gateway-dev.properties
+++ b/service-gateway-dev.properties
@@ -14,6 +14,14 @@ zuul.routes.withdrawal.path=/api/withdrawal/**
 zuul.routes.withdrawal.url= http://service-withdrawal:8007/
 
 
+# zuul para account
+zuul.routes.account.service-id=service-account
+zuul.routes.account.path=/api/account/**
+#zuul.routes.account.url= http://localhost:8098/
+zuul.routes.account.url= http://service-account:8098/
+
+
+
 # zuul para deposit
 zuul.routes.deposit.service-id=service-deposit
 zuul.routes.deposit.path=/api/deposit/**
@@ -22,10 +30,12 @@ zuul.routes.deposit.url= http://service-deposit:8006/
 
 
 # zuul para account
-zuul.routes.account.service-id=service-account
-zuul.routes.account.path=/api/account/**
-#zuul.routes.account.url= http://localhost:8098/
-zuul.routes.account.url= http://service-account:8098/
+zuul.routes.prestamo.service-id=service-account
+zuul.routes.prestamo.path=/api/prestamo/**
+#zuul.routes.prestamo.url= http://localhost:8078/
+zuul.routes.prestamo.url= http://service-account:8078/
+
+
 
 
 # zuul para historical
