--- a/service-prestamo-docker.properties
+++ b/service-prestamo-docker.properties
@@ -1,5 +1,6 @@
 #spring.profiles.active= local 
 spring.kafka.consumer.bootstrap-servers= servicekafka:9092
+#spring.kafka.consumer.bootstrap-servers= localhost:9092
 spring.kafka.consumer.key-deserializer= org.apache.kafka.common.serialization.IntegerDeserializer
 spring.kafka.consumer.value-deserializer= org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.group-id= transaction-events-listener-group
@@ -8,6 +9,7 @@ spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.datasource.url=jdbc:sqlserver://sqlservice;databaseName=db_prestamo
 spring.datasource.username=sa
 spring.datasource.password=1a.2b.3c.
+#spring.datasource.password=admin1990
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql = true
 
@@ -18,3 +20,9 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServer2012Dia
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = create
 logging.level.org.hibernate.SQL=debug
+
+
+
+
+#logging.level.org.hibernate.SQL=debug
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
