--- a/service-gateway-dev.properties
+++ b/service-gateway-dev.properties
@@ -8,10 +8,10 @@ zuul.routes.security.url= http://service-seguridad:8010/
 
 
 # zuul para withdrawal
-zuul.routes.withdrawal.service-id=service-withdrawal
-zuul.routes.withdrawal.path=/api/withdrawal/**
+#zuul.routes.withdrawal.service-id=service-withdrawal
+#zuul.routes.withdrawal.path=/api/withdrawal/**
 #zuul.routes.withdrawal.url= http://localhost:8007/
-zuul.routes.withdrawal.url= http://service-withdrawal:8007/
+#zuul.routes.withdrawal.url= http://service-withdrawal:8007/
 
 
 # zuul para account
@@ -30,10 +30,10 @@ zuul.routes.deposit.url= http://service-deposit:8006/
 
 
 # zuul para account
-zuul.routes.prestamo.service-id=service-account
-zuul.routes.prestamo.path=/api/prestamo/**
+#zuul.routes.prestamo.service-id=service-account
+#zuul.routes.prestamo.path=/api/prestamo/**
 #zuul.routes.prestamo.url= http://localhost:8078/
-zuul.routes.prestamo.url= http://service-account:8078/
+#zuul.routes.prestamo.url= http://service-account:8078/
 
 
 
