--- a/service-account-dev.properties
+++ b/service-account-dev.properties
@@ -1,4 +1,4 @@
-#spring.profiles.active= local 
+spring.kafka.listener.missing-topics-fatal = false#spring.profiles.active= local 
 spring.kafka.consumer.bootstrap-servers= servicekafka:9092
 #spring.kafka.consumer.bootstrap-servers= localhost:9092
 spring.kafka.consumer.key-deserializer= org.apache.kafka.common.serialization.IntegerDeserializer
@@ -21,7 +21,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServer2012Dia
 spring.jpa.hibernate.ddl-auto = create
 logging.level.org.hibernate.SQL=debug
 
-
+spring.kafka.listener.missing-topics-fatal = false
 
 
 #logging.level.org.hibernate.SQL=debug
